--- a/cooperhewitt/src/main/res/values/colors.xml
+++ b/cooperhewitt/src/main/res/values/colors.xml
@@ -15,7 +15,7 @@
   -->
 
 <resources>
-  <color name="colorPrimary">#f9a825</color>
+  <color name="colorPrimary">#cddc39</color>
   <color name="colorPrimary50">#4a148c</color>
   <color name="lemon">#fff59d</color>
   <color name="colorPrimaryDark">#010103</color>
