attempt to do without updates on pagedlist itself; moved objects out of observe with setter for the list that the preloader consumes

--- a/cooperhewitt/src/main/res/values/colors.xml
+++ b/cooperhewitt/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
   <color name="colorPrimary50">#4a148c</color>
   <color name="colorPrimaryDark">#010103</color>
   <color name="colorPrimaryDark80">#002266</color>
-  <color name="colorAccent">#ffb968</color>
+  <color name="colorAccent">#b2ff59</color>
   <color name="white">#ffffff</color>
   <color name="lightningbug">#ffcb09</color>
 </resources>
